[package]
name = "time_assassin"
version = "0.1.1"
edition = "2021"
authors = ["Core2002 <Core2002@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powershell_script = "1.0.4"
# console_engine = "2.5.1"
serde_json = "1.0.93"
